--- a/.cproject
+++ b/.cproject
@@ -87,7 +87,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="libraries/Time/docs|libraries/ESPAsyncWebServer/.github|libraries/AsyncTCP/.github|libraries/HX711_ADC/extra|libraries/Wire/doc|libraries/TFT_eSPI/Tools|libraries/TFT_eSPI/Extensions|libraries/TFT_eSPI/User_Setups|libraries/TFT_eSPI/Processors|libraries/TFT_eSPI/TFT_Drivers|libraries/TFT_eSPI/Fonts|libraries/Blynk/scripts|libraries/Blynk/linux|libraries/Adafruit_GFX_Library/fontconvert|libraries/Adafruit_GFX_Library/Fonts|libraries/?*/**/?xamples/**|libraries/?*/**/?xtras/**|libraries/?*/**/test*/**|libraries/?*/**/third-party/**|libraries/**/._*|libraries/?*/utility/*/*" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name=""/>
+						<entry excluding="libraries/FreeRTOS/esp32|libraries/Time/docs|libraries/ESPAsyncWebServer/.github|libraries/AsyncTCP/.github|libraries/HX711_ADC/extra|libraries/Wire/doc|libraries/TFT_eSPI/Tools|libraries/TFT_eSPI/Extensions|libraries/TFT_eSPI/User_Setups|libraries/TFT_eSPI/Processors|libraries/TFT_eSPI/TFT_Drivers|libraries/TFT_eSPI/Fonts|libraries/Blynk/scripts|libraries/Blynk/linux|libraries/Adafruit_GFX_Library/fontconvert|libraries/Adafruit_GFX_Library/Fonts|libraries/?*/**/?xamples/**|libraries/?*/**/?xtras/**|libraries/?*/**/test*/**|libraries/?*/**/third-party/**|libraries/**/._*|libraries/?*/utility/*/*" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
