--- a/.cproject
+++ b/.cproject
@@ -23,17 +23,17 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/core/variant}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/AsyncTCP/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/ESPAsyncWebServer/src}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/SPI/src}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/WiFi/src}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/Blynk/src}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/EEPROM/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/Time}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/TFT_eSPI}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/FS/src}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/SPIFFS/src}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/MCP23017/src}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/Wire/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/PID}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/Blynk/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/EEPROM/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/FS/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/MCP23017/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/SPI/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/SPIFFS/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/WiFi/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/Wire/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/Adafruit_ADS1X15}&quot;"/>
 								</option>
 								<inputType id="io.sloeber.compiler.cpp.sketch.input.121595934" name="CPP source files" superClass="io.sloeber.compiler.cpp.sketch.input"/>
@@ -44,17 +44,17 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/core/variant}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/AsyncTCP/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/ESPAsyncWebServer/src}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/SPI/src}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/WiFi/src}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/Blynk/src}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/EEPROM/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/Time}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/TFT_eSPI}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/FS/src}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/SPIFFS/src}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/MCP23017/src}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/Wire/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/PID}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/Blynk/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/EEPROM/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/FS/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/MCP23017/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/SPI/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/SPIFFS/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/WiFi/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/Wire/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/Adafruit_ADS1X15}&quot;"/>
 								</option>
 								<inputType id="io.sloeber.compiler.c.sketch.input.1819676818" name="C Source Files" superClass="io.sloeber.compiler.c.sketch.input"/>
@@ -63,19 +63,19 @@
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="io.sloeber.compiler.asm.sketch.option.incpath.702835728" name="Include Paths (-I)" superClass="io.sloeber.compiler.asm.sketch.option.incpath" useByScannerDiscovery="false" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/core/core}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/core/variant}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/SPI/src}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/WiFi/src}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/Blynk/src}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/EEPROM/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/Time}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/TFT_eSPI}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/FS/src}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/SPIFFS/src}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/MCP23017/src}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/Wire/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/PID}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/AsyncTCP/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/Blynk/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/EEPROM/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/ESPAsyncWebServer/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/FS/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/MCP23017/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/SPI/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/SPIFFS/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/WiFi/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/Wire/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/Adafruit_ADS1X15}&quot;"/>
 								</option>
 								<inputType id="io.sloeber.compiler.S.sketch.input.1888385726" name="Assembly source files" superClass="io.sloeber.compiler.S.sketch.input"/>
@@ -87,7 +87,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="libraries/FreeRTOS/esp32|libraries/Time/docs|libraries/ESPAsyncWebServer/.github|libraries/AsyncTCP/.github|libraries/HX711_ADC/extra|libraries/Wire/doc|libraries/TFT_eSPI/Tools|libraries/TFT_eSPI/Extensions|libraries/TFT_eSPI/User_Setups|libraries/TFT_eSPI/Processors|libraries/TFT_eSPI/TFT_Drivers|libraries/TFT_eSPI/Fonts|libraries/Blynk/scripts|libraries/Blynk/linux|libraries/Adafruit_GFX_Library/fontconvert|libraries/Adafruit_GFX_Library/Fonts|libraries/?*/**/?xamples/**|libraries/?*/**/?xtras/**|libraries/?*/**/test*/**|libraries/?*/**/third-party/**|libraries/**/._*|libraries/?*/utility/*/*" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name=""/>
+						<entry excluding="libraries/Time/docs|libraries/ESPAsyncWebServer/.github|libraries/AsyncTCP/.github|libraries/Wire/doc|libraries/TFT_eSPI/Tools|libraries/TFT_eSPI/Extensions|libraries/TFT_eSPI/User_Setups|libraries/TFT_eSPI/Processors|libraries/TFT_eSPI/TFT_Drivers|libraries/TFT_eSPI/Fonts|libraries/Blynk/scripts|libraries/Blynk/linux|libraries/Adafruit_GFX_Library/fontconvert|libraries/Adafruit_GFX_Library/Fonts|libraries/?*/**/?xamples/**|libraries/?*/**/?xtras/**|libraries/?*/**/test*/**|libraries/?*/**/third-party/**|libraries/**/._*|libraries/?*/utility/*/*" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
