--- a/.project
+++ b/.project
@@ -34,12 +34,12 @@
 		<link>
 			<name>core/core</name>
 			<type>2</type>
-			<locationURI>ECLIPSE_HOME/arduinoPlugin/packages/esp32/hardware/esp32/1.0.5/cores/esp32</locationURI>
+			<locationURI>ECLIPSE_HOME/arduinoPlugin/packages/esp32/hardware/esp32/1.0.6/cores/esp32</locationURI>
 		</link>
 		<link>
 			<name>core/variant</name>
 			<type>2</type>
-			<locationURI>ECLIPSE_HOME/arduinoPlugin/packages/esp32/hardware/esp32/1.0.5/variants/nodemcu-32s</locationURI>
+			<locationURI>ECLIPSE_HOME/arduinoPlugin/packages/esp32/hardware/esp32/1.0.6/variants/nodemcu-32s</locationURI>
 		</link>
 		<link>
 			<name>libraries/ADS1115_WE</name>
@@ -49,67 +49,67 @@
 		<link>
 			<name>libraries/AsyncTCP</name>
 			<type>2</type>
-			<location>/Users/kevinbayer/Development/Arduino/libraries/AsyncTCP</location>
+			<locationURI>PROJECT_LOC/libraries/AsyncTCP</locationURI>
 		</link>
 		<link>
 			<name>libraries/Blynk</name>
 			<type>2</type>
-			<location>/Users/kevinbayer/Development/Arduino/libraries/Blynk</location>
+			<locationURI>ECLIPSE_HOME/arduinoPlugin/libraries/Blynk/0.6.1</locationURI>
 		</link>
 		<link>
 			<name>libraries/EEPROM</name>
 			<type>2</type>
-			<locationURI>ECLIPSE_HOME/arduinoPlugin/packages/esp32/hardware/esp32/1.0.5/libraries/EEPROM</locationURI>
+			<locationURI>ECLIPSE_HOME/arduinoPlugin/packages/esp32/hardware/esp32/1.0.6/libraries/EEPROM</locationURI>
 		</link>
 		<link>
 			<name>libraries/ESPAsyncWebServer</name>
 			<type>2</type>
-			<location>/Users/kevinbayer/Development/Arduino/libraries/ESPAsyncWebServer</location>
+			<locationURI>PROJECT_LOC/libraries/ESPAsyncWebServer</locationURI>
 		</link>
 		<link>
 			<name>libraries/FS</name>
 			<type>2</type>
-			<locationURI>ECLIPSE_HOME/arduinoPlugin/packages/esp32/hardware/esp32/1.0.5/libraries/FS</locationURI>
+			<locationURI>ECLIPSE_HOME/arduinoPlugin/packages/esp32/hardware/esp32/1.0.6/libraries/FS</locationURI>
 		</link>
 		<link>
 			<name>libraries/MCP23017</name>
 			<type>2</type>
-			<location>/Users/kevinbayer/Development/Arduino/libraries/MCP23017</location>
+			<locationURI>ECLIPSE_HOME/arduinoPlugin/libraries/MCP23017/1.2.0</locationURI>
 		</link>
 		<link>
 			<name>libraries/PID</name>
 			<type>2</type>
-			<location>/Users/kevinbayer/Development/Arduino/libraries/PID</location>
+			<locationURI>ECLIPSE_HOME/arduinoPlugin/libraries/PID/1.2.0</locationURI>
 		</link>
 		<link>
 			<name>libraries/SPI</name>
 			<type>2</type>
-			<locationURI>ECLIPSE_HOME/arduinoPlugin/packages/esp32/hardware/esp32/1.0.5/libraries/SPI</locationURI>
+			<locationURI>ECLIPSE_HOME/arduinoPlugin/packages/esp32/hardware/esp32/1.0.6/libraries/SPI</locationURI>
 		</link>
 		<link>
 			<name>libraries/SPIFFS</name>
 			<type>2</type>
-			<locationURI>ECLIPSE_HOME/arduinoPlugin/packages/esp32/hardware/esp32/1.0.5/libraries/SPIFFS</locationURI>
+			<locationURI>ECLIPSE_HOME/arduinoPlugin/packages/esp32/hardware/esp32/1.0.6/libraries/SPIFFS</locationURI>
 		</link>
 		<link>
 			<name>libraries/TFT_eSPI</name>
 			<type>2</type>
-			<location>/Users/kevinbayer/Development/Arduino/libraries/TFT_eSPI</location>
+			<locationURI>ECLIPSE_HOME/arduinoPlugin/libraries/TFT_eSPI/1.4.16</locationURI>
 		</link>
 		<link>
 			<name>libraries/Time</name>
 			<type>2</type>
-			<location>/Users/kevinbayer/Development/Arduino/libraries/Time</location>
+			<locationURI>ECLIPSE_HOME/arduinoPlugin/libraries/Time/1.5.0</locationURI>
 		</link>
 		<link>
 			<name>libraries/WiFi</name>
 			<type>2</type>
-			<locationURI>ECLIPSE_HOME/arduinoPlugin/packages/esp32/hardware/esp32/1.0.5/libraries/WiFi</locationURI>
+			<locationURI>ECLIPSE_HOME/arduinoPlugin/packages/esp32/hardware/esp32/1.0.6/libraries/WiFi</locationURI>
 		</link>
 		<link>
 			<name>libraries/Wire</name>
 			<type>2</type>
-			<locationURI>ECLIPSE_HOME/arduinoPlugin/packages/esp32/hardware/esp32/1.0.5/libraries/Wire</locationURI>
+			<locationURI>ECLIPSE_HOME/arduinoPlugin/packages/esp32/hardware/esp32/1.0.6/libraries/Wire</locationURI>
 		</link>
 	</linkedResources>
 </projectDescription>
