--- a/.project
+++ b/.project
@@ -42,9 +42,14 @@
 			<locationURI>ECLIPSE_HOME/arduinoPlugin/packages/esp32/hardware/esp32/1.0.6/variants/nodemcu-32s</locationURI>
 		</link>
 		<link>
-			<name>libraries/ADS1115_WE</name>
+			<name>libraries/Adafruit_ADS1X15</name>
 			<type>2</type>
-			<locationURI>ECLIPSE_HOME/arduinoPlugin/libraries/ADS1115_WE/1.3.0</locationURI>
+			<locationURI>ECLIPSE_HOME/arduinoPlugin/libraries/Adafruit_ADS1X15/2.1.1</locationURI>
+		</link>
+		<link>
+			<name>libraries/Adafruit_BusIO</name>
+			<type>2</type>
+			<locationURI>ECLIPSE_HOME/arduinoPlugin/libraries/Adafruit_BusIO/1.7.2</locationURI>
 		</link>
 		<link>
 			<name>libraries/AsyncTCP</name>
