Introduce OTA Updates

--- a/.cproject
+++ b/.cproject
@@ -35,6 +35,8 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/WiFi/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/Wire/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/ADS1115_WE/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/Update/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/WebServer/src}&quot;"/>
 								</option>
 								<inputType id="io.sloeber.compiler.cpp.sketch.input.121595934" name="CPP source files" superClass="io.sloeber.compiler.cpp.sketch.input"/>
 							</tool>
@@ -56,6 +58,8 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/WiFi/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/Wire/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/ADS1115_WE/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/Update/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/WebServer/src}&quot;"/>
 								</option>
 								<inputType id="io.sloeber.compiler.c.sketch.input.1819676818" name="C Source Files" superClass="io.sloeber.compiler.c.sketch.input"/>
 							</tool>
@@ -77,6 +81,8 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/WiFi/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/Wire/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/ADS1115_WE/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/Update/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Espressomaschine/libraries/WebServer/src}&quot;"/>
 								</option>
 								<inputType id="io.sloeber.compiler.S.sketch.input.1888385726" name="Assembly source files" superClass="io.sloeber.compiler.S.sketch.input"/>
 							</tool>
